# GoBanBot

./: CMakeLists.txt  README.md
src/: Board.cpp  Board.h  Game.cpp  Game.h  Search.cpp  Search.h  TransTable.cpp  TransTable.h  Utils.h  ai_interface.cpp  ai_interface.h  board.cpp  board.h  game.cpp  game.h  logger.cpp  logger.h  main.cpp  mcts_ai.cpp  mcts_ai.h  negamax_ai.cpp  negamax_ai.h  neural_net.cpp  neural_net.h  utils.h
